--- a/src/app/component/eco-learn-new/eco-learn-new.component.html
+++ b/src/app/component/eco-learn-new/eco-learn-new.component.html
@@ -77,6 +77,22 @@
                   </div>
 
 
+                  <ng-container *ngIf="selectedCategories.length > 0">
+
+                    <label class="mt-3">Selected Categories For The New Eco-Learn Resource:</label>
+                    <mat-chip-listbox>
+                      <div *ngFor="let category of selectedCategories">
+                        <mat-chip-row (removed)="onRemoveCategory(category)">
+                          {{ category }}
+                          <button matChipRemove aria-label="Remove" (click)="onRemoveCategory(category)">
+                            <mat-icon>cancel</mat-icon>
+                          </button>
+                        </mat-chip-row>
+                      </div>
+                    </mat-chip-listbox>
+                  </ng-container>
+
+
                   <div class="mt-4 d-flex justify-content-end">
                     <button [disabled]="state.dataState === DataState.LOADING || newResourceForm.invalid || newResourceForm.pristine || !isCategoryChosen() || (isLoading$ | async)"
                             (click)="createResource($event, fileInput)"
