--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -118,26 +118,16 @@
                     <ng-container *ngIf="selectedMaterials.length > 0">
 
                       <label class="mt-3">Accepted Recycling Materials:</label>
-                      <mat-chip-grid aria-label="Enter keywords">
-                        <div *ngFor="let material of selectedMaterials">
-                          <mat-chip-row (removed)="onRemoveMaterial(material)">
-                            {{ material }}
-                            <button matChipRemove aria-label="Remove" (click)="onRemoveMaterial(material)">
-                              <mat-icon>cancel</mat-icon>
-                            </button>
-                          </mat-chip-row>
-                        </div>
-                      </mat-chip-grid>
+
+                      <div mat-basic-chip-row class="chip-set-container">
+                        <mat-chip *ngFor="let material of selectedMaterials">
+                          {{ material }}
+                          <button matChipRemove aria-label="Remove" (click)="onRemoveMaterial(material)">
+                            <mat-icon>cancel</mat-icon>
+                          </button>
+                        </mat-chip>
+                      </div>
                     </ng-container>
-
-
-
-                    <!--                    <div class="col-md-12 mb-3">-->
-                    <!--                      <div class="form-group">-->
-                    <!--                        <label for="imageUrl">Image URL</label>-->
-                    <!--                        <input type="text" ngModel name="imageUrl" class="form-control" id="imageUrl">-->
-                    <!--                      </div>-->
-                    <!--                    </div>-->
 
                   </div>
 
